# Chess-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.org  compile_commands.json  meson.build  shell.nix
include/: board.h  board.hpp  utils.h  utils.hpp  vec.h
src/: a.out  bitboard.cpp  bitboard.hpp  bitopt.h  bitopt.hpp  board.c  board.cpp  board.h  board.hpp  debug.c  debug.h  debug.hpp  evaluate.hpp  gui_chess.cpp  load_FEN.cpp  load_fen.c  load_fen.cpp  main.c  main.cpp  main2.cpp  move_gen.c  move_gen.cpp  move_gen.h  naive_materialistic_play.hpp  pawn_move_gen.c  pawn_move_gen.cpp  pawn_move_gen.h  perft.cpp  search.hpp  str_utils.hpp  tests.cpp  uci.cpp  utils.h  utils.hpp
src/perft/: f.txt  go.mod  main.go  perft  s.txt  t.txt
